# riddler-crossword

./: CMakeLists.txt  main.cpp
src/: main.cpp  masks.cpp  masks.h  params.h  rows.cpp  rows.h
test/: testmasks.cpp  testrows.cpp
